# serializer version: 1
# name: TestGZDoomGenerator.test_generate
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate[script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 1
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'false'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'false'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'false'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'true'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'true'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=true
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_joystick': 'true'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 1
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'false'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'false'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'false'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'true'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'true'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=true
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_joystick': 'true'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  Path=/some/path
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  Path=/some/other/path
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  Path=/another/path
  Path=/yet/another/path
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing[script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile /userdata/system/logs/gzdoom.log
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing_no_global_settings
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  Path=/some/path
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  Path=/some/other/path
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  Path=/another/path
  Path=/yet/another/path
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_rom_gzdoom
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'DOOM2.WAD',
      '-file',
      'ALIENS_ERADICATION_TC_2_0.pk3',
      'ERADICATION_MAPSET_2_0.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '',
    ]),
    dict({
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_rom_gzdoom[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  [SoundfontSearch.Directories]
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  [GlobalSettings]
  use_joystick=false
  
  '''
# ---
# name: TestGZDoomGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'restore_store': 'KEY_F9',
      'save_store': 'KEY_F6',
    }),
    'name': 'gzdoom',
  })
# ---
